# flake-pin

./: .gitignore  README.md  cabal.project  flake-pin.cabal  flake.nix
.github/workflows/: haskell.yml
app/: Main.hs
src/FlakePin/: Types.hs
src/FlakePin/Path/: Validation.hs
src/FlakePin/Path/Validation/: Internal.hs
test/: Spec.hs
test/FlakePin/: FlakeDirPathSpec.hs  FlakeInputNameSpec.hs
test/FlakePin/Path/Validation/: InternalSpec.hs
